--- a/app/src/main/res/layout/activity_decode.xml
+++ b/app/src/main/res/layout/activity_decode.xml
@@ -110,7 +110,7 @@
             android:layout_height="match_parent">
 
         <EditText
-                android:id="@+id/data"
+                android:id="@+id/data_edit"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:imeActionLabel="@string/enter"
